Replace JavaPoet with ByteBuddy and remove second compile step from compiler